# molehill-chemical-calculator

./: .gitattributes  CMakeLists.txt  ChemCalc.conf  ChemCalc_data.db  ChemCalc_data.sqbpro  ChemCalc_help1.md  README.md  about_dialog.cpp  about_dialog.h  about_dialog.ui  chemcalc.desktop  chemcalc.sh  edit_database.cpp  edit_database.h  edit_database.ui  edit_dialog.cpp  edit_dialog.h  edit_dialog.ui  ldd-dependencies.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mprintdialog.cpp  mprintdialog.h  mprintdialog.ui  preferences_dialog.cpp  preferences_dialog.h  preferences_dialog.ui  resources.qrc  select_dialog.cpp  select_dialog.h  select_dialog.ui
molehill-archive-linux/: chemcalc.sh
molehill-linux-installer/: README_linux.md  checksums.md  chemcalc
molehill-win-installer/: README_windows.md  checksums.md
